Bug 1826635 - Fix a comment in ReflowChildren(). r=dholbert

SumOfChildrenBlockSizeProperty() was moved into PerFragmentFlexData in
Bug 1804997 Part 4 [1], and later it was renamed in Bug 1743890 Part 4 [2].

[1] https://hg.mozilla.org/mozilla-central/rev/0404d371c42f3e73b56678fe52a89f4f788ea9b5
[2] https://hg.mozilla.org/mozilla-central/rev/6064a73fc99f012a7400393bdc2ade89fbdf30f8

Differential Revision: https://phabricator.services.mozilla.com/D174992